--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -22,6 +23,7 @@
     "mongod": "^2.0.0",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
+    "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
