--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongod": "^2.0.0",
     "mongodb": "^4.10.0",
