--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natours",
+  "name": "smouApi",
   "version": "1.0.0",
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
@@ -14,6 +14,7 @@
     "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-mongo-sanitize": "^2.2.0",
@@ -27,9 +28,11 @@
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.8.0",
     "sharp": "^0.31.2",
     "slugify": "^1.6.5",
+    "strapi-provider-email-nodemailer": "^3.6.10",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
